<resources>
    <string name="app_name">TeleQuiz_20211602</string>
    <string name="title_appbar">APPSIoT</string>
    <string name="title_telequiz">TeleQuiz</string>
    <string name="hint_ingresar_nombre">Ingresar nombre</string>
    <string name="btn_entrar">Entrar</string>
    <string name="desc_logo">Logo de la app</string>


    <!-- SecondActivity -->
    <string name="title_toolbar_second">TeleQuiz</string>
    <string name="label_bienvenido">BIENVENIDO</string>
    <string name="label_selecciona">Selecciona una temática:</string>
    <string name="btn_redes">Redes</string>
    <string name="btn_ciber">CiberSeguridad</string>
    <string name="btn_micro">Microondas</string>

    <!-- Juego -->
    <string name="hint_text">Al ojo</string>

    <string name="hint_button">\?</string>
    <string name="score_prefix">Puntaje %1$d</string>
    <string name="toast_finish">¡Fin! Puntaje total: %1$d</string>
    <string name="question_numbered">%1$d. %2$s</string>
    <string name="plus_points">+%1$d</string>


    <!-- GameActivity -->
    <string name="topic_micro">Microondas</string>
    <string name="score_initial">Puntaje 0</string>
    <string name="question_placeholder">1. Pregunta…</string>
    <string name="option_1">Opción 1</string>
    <string name="option_2">Opción 2</string>
    <string name="option_3">Opción 3</string>
    <string name="option_4">Opción 4</string>

    <!-- Menu -->

    <string name="menu_profile">Ver perfil y estadísticas</string>

    <!-- Navegación del juego -->
    <string name="previous">Anterior</string>
    <string name="next">Siguiente</string>


    <!-- Resultado-->
    <string name="finish">Terminar</string>
    <string name="result_title">Puntaje Total:</string>
    <string name="play_again">Volver a jugar</string>
    <string name="back">Anterior</string>
    <string name="result_topic">%1$s</string>

    <!-- Perfil-->
    <string name="profile_title">PERFIL</string>
    <string name="profile_player">Jugador: %1$s</string>
    <string name="profile_start">Inicio: %1$s</string>
    <string name="profile_count">Cantidad de Partidas: %1$d</string>
    <string name="profile_games_title">Partidas:</string>
    <string name="profile_canceled">Canceló</string>
    <string name="profile_in_progress">En curso</string>
    <string name="profile_line">%1$s | Tiempo: %2$ds | Puntaje: %3$d</string>
    <string name="profile_line_in_progress">%1$s | Inicio: %2$s | %3$s</string>



    </resources>
